Fixed a bug in the synchronization of the strip view with the tree. Added a visitor for dumping the tree to the console (useful for debugging.)

--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -298,6 +298,7 @@
     <Compile Include="UserProfile.cs" />
     <Compile Include="Visitors\AssetCreator.cs" />
     <Compile Include="Visitors\DescendantsVisitor.cs" />
+    <Compile Include="Visitors\DumpTree.cs" />
     <Compile Include="Visitors\PhraseEnumerator.cs" />
     <Compile Include="Visitors\SectionNodePosition.cs" />
     <Compile Include="Visitors\UndeleteSubtree.cs" />
