--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -83,11 +83,14 @@
     <Compile Include="Commands\Strips\DeletePhrase.cs" />
     <Compile Include="Commands\Strips\RenamePhrase.cs" />
     <Compile Include="Commands\TOC\AddSection.cs" />
+    <Compile Include="Commands\TOC\CopySection.cs" />
+    <Compile Include="Commands\TOC\CutSection.cs" />
     <Compile Include="Commands\TOC\DecreaseSectionLevel.cs" />
     <Compile Include="Commands\TOC\DeleteSection.cs" />
     <Compile Include="Commands\TOC\IncreaseSectionLevel.cs" />
     <Compile Include="Commands\TOC\MoveSectionDown.cs" />
     <Compile Include="Commands\TOC\MoveSectionUp.cs" />
+    <Compile Include="Commands\TOC\PasteSection.cs" />
     <Compile Include="Commands\TOC\Rename.cs" />
     <Compile Include="CustomProperties.cs" />
     <Compile Include="Dialogs\About.cs">
