--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -86,15 +86,11 @@
     <Compile Include="Commands\Strips\RenamePhrase.cs" />
     <Compile Include="Commands\Strips\SplitPhrase.cs" />
     <Compile Include="Commands\TOC\AddSection.cs" />
-    <Compile Include="Commands\TOC\CopySection.cs" />
-    <Compile Include="Commands\TOC\CutSection.cs" />
-    <Compile Include="Commands\TOC\DecreaseSectionLevel.cs" />
+    <Compile Include="Commands\TOC\ChangeSectionNodeLevel.cs" />
     <Compile Include="Commands\TOC\DeleteSection.cs" />
-    <Compile Include="Commands\TOC\IncreaseSectionLevel.cs" />
-    <Compile Include="Commands\TOC\MoveSectionDown.cs" />
-    <Compile Include="Commands\TOC\MoveSectionUp.cs" />
-    <Compile Include="Commands\TOC\PasteSection.cs" />
+    <Compile Include="Commands\TOC\MoveSectionNode.cs" />
     <Compile Include="Commands\TOC\Rename.cs" />
+    <Compile Include="Commands\TOC\SectionNodeClipboard.cs" />
     <Compile Include="CustomProperties.cs" />
     <Compile Include="Dialogs\About.cs">
       <SubType>Form</SubType>
@@ -189,6 +185,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Project.Blocks.cs" />
     <Compile Include="Project.cs" />
+    <Compile Include="Project.TOC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Audio\VuMeterForm.resx">
       <DependentUpon>VuMeterForm.cs</DependentUpon>
