TOC clipboard features are synchronized with the strip view
The strip manager panel class is split into smaller files

The clipboard has a small bug where pasted content doesn't really seem to be copies of the original nodes.  Hopefully it's something stupid...

--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -295,11 +295,17 @@
     <Compile Include="UserControls\StripManagerPanel.Blocks.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="UserControls\StripManagerPanel.ContextMenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="UserControls\StripManagerPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\StripManagerPanel.Designer.cs">
       <DependentUpon>StripManagerPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\StripManagerPanel.SectionNodeSyncCallbacks.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\TOCPanel.ContextMenu.cs">
       <SubType>UserControl</SubType>
