--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Commands\TOC\MoveSectionNode.cs" />
     <Compile Include="Commands\TOC\Rename.cs" />
     <Compile Include="Commands\TOC\SectionNodeClipboard.cs" />
+    <Compile Include="Commands\TOC\ShallowDeleteSectionNode.cs" />
     <Compile Include="CustomProperties.cs" />
     <Compile Include="Dialogs\About.cs">
       <SubType>Form</SubType>
