Added a visitor to help with pasting. The pasted phrases have new assets made for them and the core tree is correct; however, the strip view isn't re-visualized (coming soon).
There is one problem with cut-paste, and that is that the copying of assets happens during a paste, so the paste doesn't know if it should clean up the copies' sources (as it would do, effectively, in a cut-paste operation).  This is an efficiency problem.

Undo-paste doesn't clean up its copied assets yet either.

--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -328,6 +328,7 @@
     <Compile Include="Visitors\DescendantsVisitor.cs" />
     <Compile Include="Visitors\DumpTree.cs" />
     <Compile Include="Visitors\PhraseEnumerator.cs" />
+    <Compile Include="Visitors\CopyPhraseAssets.cs" />
     <Compile Include="Visitors\SectionNodePosition.cs" />
     <Compile Include="Visitors\UndeleteSubtree.cs" />
   </ItemGroup>
