Setting pages is starting to work. Undo is missing.

--- a/branches/obi-syncnodes/Obi/Obi.csproj
+++ b/branches/obi-syncnodes/Obi/Obi.csproj
@@ -311,6 +311,12 @@
     <Compile Include="UserControls\StripManagerPanel.SectionNodeSyncCallbacks.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="UserControls\StructureBlock.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\StructureBlock.Designer.cs">
+      <DependentUpon>StructureBlock.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\TOCPanel.ContextMenu.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -349,6 +355,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="help_en.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\StructureBlock.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>StructureBlock.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
