--- a/branches/obi-syncnodes/Obi/Obi.csproj
+++ b/branches/obi-syncnodes/Obi/Obi.csproj
@@ -84,7 +84,9 @@
     <Compile Include="Commands\Strips\MergePhrases.cs" />
     <Compile Include="Commands\Strips\DeletePhrase.cs" />
     <Compile Include="Commands\Strips\MovePhrase.cs" />
+    <Compile Include="Commands\Strips\RemovePageLabel.cs" />
     <Compile Include="Commands\Strips\RenamePhrase.cs" />
+    <Compile Include="Commands\Strips\SetPageLabel.cs" />
     <Compile Include="Commands\Strips\SplitPhrase.cs" />
     <Compile Include="Commands\TOC\AddSection.cs" />
     <Compile Include="Commands\TOC\ChangeSectionNodeLevel.cs" />
