--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -85,9 +85,9 @@
     <Compile Include="Commands\Strips\MergePhrases.cs" />
     <Compile Include="Commands\Strips\DeletePhrase.cs" />
     <Compile Include="Commands\Strips\MovePhrase.cs" />
-    <Compile Include="Commands\Strips\RemovePageLabel.cs" />
+    <Compile Include="Commands\Strips\RemovePageNumber.cs" />
     <Compile Include="Commands\Strips\RenamePhrase.cs" />
-    <Compile Include="Commands\Strips\SetPageLabel.cs" />
+    <Compile Include="Commands\Strips\SetPageNumber.cs" />
     <Compile Include="Commands\Strips\SplitPhrase.cs" />
     <Compile Include="Commands\TOC\AddSection.cs" />
     <Compile Include="Commands\TOC\ChangeSectionNodeLevel.cs" />
@@ -167,6 +167,7 @@
     <Compile Include="Events\Node\MovedNodeEventArgs.cs" />
     <Compile Include="Events\Node\SelectedEventArgs.cs" />
     <Compile Include="Events\Node\SetMediaEventArgs.cs" />
+    <Compile Include="Events\Node\SetPageEventArgs.cs" />
     <Compile Include="Events\Node\ShallowSwappedNodesEventArgs.cs" />
     <Compile Include="Events\Node\SplitNodeEventArgs.cs" />
     <Compile Include="Events\Project\CommandCreatedEventArgs.cs" />
