Cleaned up asset stuff a little and added asset manager custom exceptions.

--- a/branches/Obi-subclassing-nodes/Obi/Obi.csproj
+++ b/branches/Obi-subclassing-nodes/Obi/Obi.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Assets\AssetManager.cs" />
     <Compile Include="Assets\AudioClip.cs" />
+    <Compile Include="Assets\Exceptions.cs" />
     <Compile Include="Audio\AudioDevice.cs" />
     <Compile Include="Assets\AudioMediaAsset.cs" />
     <Compile Include="Audio\AudioPlayer.cs" />
