--- a/branches/Obi-subclassing-nodes/Obi/Obi.csproj
+++ b/branches/Obi-subclassing-nodes/Obi/Obi.csproj
@@ -328,6 +328,7 @@
       <DependentUpon>StripManagerPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControls\StripManagerPanel.SectionNodeSyncCallbacks.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\StructureBlock.cs">
       <SubType>UserControl</SubType>
