--- a/branches/Obi-subclassing-nodes/Obi/Obi.csproj
+++ b/branches/Obi-subclassing-nodes/Obi/Obi.csproj
@@ -60,7 +60,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="urakawa, Version=1.0.2393.35010, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\implementation\UrakawaToolkit\bin\Debug\urakawa.dll</HintPath>
+      <HintPath>..\..\..\..\..\trunk\urakawa\implementation\UrakawaToolkit\obj\Debug\urakawa.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
