* touch is now a command; only modifies the project if unmodified. * undoing all changes reverts the project to unmodified. * merged edit operations into a single main menu (problem with shortcut and phrase nodes) * TODO: make a single (user-visible) clipboard for implementing paste.

--- a/branches/Obi-0.7/Obi/Obi.csproj
+++ b/branches/Obi-0.7/Obi/Obi.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Commands\TOC\SectionNodeCommand.cs" />
     <Compile Include="Commands\TOC\SectionNodeListCommand.cs" />
     <Compile Include="Commands\TOC\ShallowDeleteSectionNode.cs" />
+    <Compile Include="Commands\Touch.cs" />
     <Compile Include="CustomProperties.cs" />
     <Compile Include="Dialogs\About.cs">
       <SubType>Form</SubType>
