--- a/branches/Obi-0.7/Obi/Obi.csproj
+++ b/branches/Obi-0.7/Obi/Obi.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Audio\VuMeterForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Clipboard.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="Commands\ListCommand.cs" />
