--- a/branches/Obi-0.8/Obi/Obi.csproj
+++ b/branches/Obi-0.8/Obi/Obi.csproj
@@ -58,9 +58,9 @@
     <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="urakawa, Version=0.5.2481.25819, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="urakawa, Version=0.5.2522.26469, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\implementation\UrakawaToolkit\bin\Debug\urakawa.dll</HintPath>
+      <HintPath>..\..\..\..\..\trunk\urakawa\implementation\UrakawaToolkit\bin\Debug\urakawa.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -97,8 +97,6 @@
     <Compile Include="Commands\TOC\MoveSectionNode.cs" />
     <Compile Include="Commands\TOC\Rename.cs" />
     <Compile Include="Commands\TOC\SectionNodeClipboard.cs" />
-    <Compile Include="Commands\TOC\SectionNodeCommand.cs" />
-    <Compile Include="Commands\TOC\SectionNodeListCommand.cs" />
     <Compile Include="Commands\TOC\ShallowDeleteSectionNode.cs" />
     <Compile Include="Commands\Touch.cs" />
     <Compile Include="CustomProperties.cs" />
@@ -183,17 +181,18 @@
     <Compile Include="Events\Audio\VuMeter\PeakOverloadEventArgs.cs" />
     <Compile Include="Events\Audio\VuMeter\ResetEventArgs.cs" />
     <Compile Include="Events\Audio\VuMeter\UpdateFormsEventArgs.cs" />
+    <Compile Include="Events\NodeEventHandlers.cs" />
     <Compile Include="Events\Node\AddedPhraseNodeEventArgs.cs" />
     <Compile Include="Events\Node\MergeNodesEventArgs.cs" />
     <Compile Include="Events\Node\NodeEventArgs.cs" />
     <Compile Include="Events\Node\PhraseDetectionEventArgs.cs" />
-    <Compile Include="Events\Node\RenameNodeEventArgs.cs" />
-    <Compile Include="Events\Node\MovedNodeEventArgs.cs" />
+    <Compile Include="Events\Node\RenameSectionNodeEventArgs.cs" />
+    <Compile Include="Events\Node\MovedSectionNodeEventArgs.cs" />
     <Compile Include="Events\Node\SelectedEventArgs.cs" />
     <Compile Include="Events\Node\SetMediaEventArgs.cs" />
     <Compile Include="Events\Node\SetPageEventArgs.cs" />
     <Compile Include="Events\Node\ShallowSwappedNodesEventArgs.cs" />
-    <Compile Include="Events\Node\SplitNodeEventArgs.cs" />
+    <Compile Include="Events\Node\SplitPhraseNodeEventArgs.cs" />
     <Compile Include="Events\Project\CommandCreatedEventArgs.cs" />
     <Compile Include="Events\Project\StateChangedEventArgs.cs" />
     <Compile Include="Events\Strip\ImportAssetEventArgs.cs" />
@@ -214,6 +213,7 @@
     <Compile Include="ObiForm.Designer.cs">
       <DependentUpon>ObiForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ObiNode.cs" />
     <Compile Include="PhraseNode.cs" />
     <Compile Include="Playlist.cs" />
     <Compile Include="Program.cs" />
